--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="assets/favicon" type="image/x-icon" />
@@ -32,10 +32,13 @@
     <script src="main.js"></script>
   </head>
   <body>
-    <div id="app">
+    <div class="wrapper">
       <header class="header">
+        <div class="logo">
+          <img src="assets/yandex_logo.svg" alt="yandex_logo">
+        </div>
       </header>
-      <article class="content"></article>
+      <article class="main-content"></article>
       <footer class="footer"></footer>
     </div>
   </body>
