--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
     <div class="wrapper">
       <header class="header">
         <div class="logo">
-          <img src="assets/yandex_logo.svg" alt="yandex_logo">
+         <a href="/"><img src="assets/yandex_logo.svg" alt="yandex_logo"></a>
         </div>
+        <nav class="navigation"></nav>
       </header>
       <article class="main-content"></article>
       <footer class="footer"></footer>
