--- a/index.html
+++ b/index.html
@@ -57,9 +57,11 @@
           </form>
         </nav>
       </header>
-      <article class="main-content"></article>
+      <article class="main-content">
+        <div class="wrapper2"></div>
+      </article>
       <footer class="footer">
-        <h3 class="copy">&copy; Ennanov Daniyar <script>new Date().getFullYear()>2010&&document.write(new Date().getFullYear());</script></h3>
+        <h3 class="copy">&copy; KIPU <script>new Date().getFullYear()>2010&&document.write(new Date().getFullYear());</script></h3>
       </footer>
     </div>
   </body>
